feat: Upgrade To Tomcat 10 - Meeds-io/MIPs#76 (#691)
This change will :
* upgrade Jakarta Servlet API 6.0 packages to be compatible with Tomcat 10
* replace Chat Server implementation made with Juzu to use Servlet API